# autonomous_car

./: CMakeLists.txt  README.md  result1.avi
include/: common.h
include/carcontrol/: carcontrol.h
include/drivecomands/: VectorAngle.hpp
include/filters/kalman/: kalman.h
include/gps/: gps.h  gpsconnection.h  gpsdata.h
include/image/: image.h
include/imagemapping/: imagecoord.h  imageprimitive.h  line.h  maprepresentation.h  point.h
include/imu/: imu.h
include/imuencoderposition/: imuencoderposition.h
include/lanedetection/neuralnetwork/: caffenetwork.h  ineuralnetwork.h  movidiusnetwork.h
include/map/: edge.h  edgeset.h  heuristics.h  igeomprim.h  map.h  node.h  nodeset.h  path.h  pathtracking.h  vec2.h
include/observer/: observer.h
include/obstacledetection/: ObstacleDetection.h
include/positiondrive/: positiondrive.h
include/serialhandler/: connexc.h  event.h  filehandler.h  findfile.h  messageconverter.h  serialhandler.h
include/socket/: socket.h
include/statemachine/: crossroadstate.h  idlestate.h  lanefollow.h  overtakestate.h  parkingstate.h  pathplanningstate.h  state.h  statemachine.h  stopsignstate.h
include/timer/: timer.h
include/trafficsign/: TrafficSignRecognition.h
lib/imu/: CMakeCache.txt  Makefile  RTIMULib.ini  RTIMULibDrive  cmake_install.cmake
lib/imu/Output/: RTIMULib.ini  RTIMULibDrive
lib/serial/: 0001-build-Fix-packaging-issues.patch  CMakeLists.txt  CMakeLists.txt.rej  cxx-serial.pc.in  package.xml
resources/: Map.json  svmAutoTrained
resources/caffemodel/: model.prototxt  model_test_small.prototxt
results/: result_parking.avi  result_stop.avi
scripts/: clean.sh  compile.sh  compile_and_run.sh  run.sh
scripts/install_libs/jsoncpp/: install.sh
scripts/install_libs/serial/: install.sh
src/: IMUTest.cpp  cnnTest.cpp  cnnTest2.cpp  driveTest.cpp  gpsTest.cpp  imageTest.cpp  imagecoordTest.cpp  main.cpp  mainState.cpp  mapreprTest.cpp  moveTest.cpp  moveTest2.cpp  movidiusTest.cpp  nodesTest.cpp  obstacleTest.cpp  pathDrriveTest.hpp  stateTest.cpp  testLine.cpp  testPoint.cpp  timerTest.cpp  trafficSignTest.cpp
src/carcontrol/: carcontrol.cpp
src/gps/: gpsconnection.cpp  gpsdata.cpp
src/image/: image.cpp
src/imagemapping/: imagecoord.cpp  line.cpp  maprepresentation.cpp  point.cpp
src/imu/: imu.cpp
src/imuencoderposition/: imuencoderposition.cpp
src/lanedetection/neuralnetwork/: caffenetwork.cpp  movidiusnetwork.cpp
src/map/: edge.cpp  edgeset.cpp  heuristics.cpp  map.cpp  node.cpp  nodeset.cpp  path.cpp  pathtracking.cpp  vec2.cpp
src/obstacledetection/: ObstacleDetection.cpp
src/positiondrive/: positiondrive.cpp
src/serialhandler/: filehandler.cpp  findfile.cpp  messageconverter.cpp  serialhandler.cpp
src/socket/: socket.cpp
src/statemachine/: crossroadstate.cpp  idlestate.cpp  lanefollow.cpp  overtakestate.cpp  parking.cpp  pathplanningstate.cpp  state.cpp  statemachine.cpp  stopsignstate.cpp
src/timer/: timer.cpp
src/trafficsign/: TrafficSignRecognition.cpp
